--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required(VERSION 3.15)
 
 # PLEASE CUSTOMIZE THESE TWO BEFORE IMPORTING PHYSX PACKAGE
 ##############################################################
-# set(VCPKG_TARGET_TRIPLET x64-windows-static)
-# set(VCPKG_LIBRARY_LINKAGE static)
-set(VCPKG_TARGET_TRIPLET x64-windows)
+# set(VCPKG_TARGET_TRIPLET x64-windows)
+# set(VCPKG_LIBRARY_LINKAGE dynamic)
+
+set(VCPKG_TARGET_TRIPLET x64-linux)
 set(VCPKG_LIBRARY_LINKAGE dynamic)
 ##############################################################
 
