--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,42 +22,38 @@ add_executable(hello_physx main.cpp)
 
 # Note: if the package cannot be found, check that you're using the right triplet
 find_package(unofficial-omniverse-physx-sdk CONFIG REQUIRED)
-target_link_libraries(hello_physx unofficial::omniverse-physx-sdk::sdk)
+target_link_libraries(hello_physx PRIVATE unofficial::omniverse-physx-sdk::sdk)
 
-# Adjust CRT linkage according to requested one
-if(WIN32 AND VCPKG_CRT_LINKAGE STREQUAL "static")
-    set_target_properties(unofficial::omniverse-physx-sdk::sdk PROPERTIES
-        INTERFACE_COMPILE_OPTIONS "/MT$<$<CONFIG:Debug>:d>"
-    )
-elseif(WIN32 AND VCPKG_CRT_LINKAGE STREQUAL "dynamic")
-    set_target_properties(unofficial::omniverse-physx-sdk::sdk PROPERTIES
-        INTERFACE_COMPILE_OPTIONS "/MD$<$<CONFIG:Debug>:d>"
-    )
-endif()
+# # Adjust CRT linkage according to requested one
+# if(WIN32 AND VCPKG_CRT_LINKAGE STREQUAL "static")
+#     set_target_properties(unofficial::omniverse-physx-sdk::sdk PROPERTIES
+#         INTERFACE_COMPILE_OPTIONS "/MT$<$<CONFIG:Debug>:d>"
+#     )
+# elseif(WIN32 AND VCPKG_CRT_LINKAGE STREQUAL "dynamic")
+#     set_target_properties(unofficial::omniverse-physx-sdk::sdk PROPERTIES
+#         INTERFACE_COMPILE_OPTIONS "/MD$<$<CONFIG:Debug>:d>"
+#     )
+# endif()
+
 
 # Optional: import the defined target to copy over the GPU acceleration libraries (3rd party provided by NVIDIA)
-if(TARGET unofficial::omniverse-physx-sdk-gpu-library AND UNIX)
-    # Add rpath setting to find so libraries on unix based systems
-    set_target_properties(hello_physx PROPERTIES
-        BUILD_WITH_INSTALL_RPATH TRUE
-        INSTALL_RPATH "$ORIGIN"
-    )
-endif()
-
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_definitions(hello_physx PRIVATE _DEBUG)
-endif()
-
 if(TARGET unofficial::omniverse-physx-sdk-gpu-library)
+    if(UNIX)
+        # Add rpath setting to find so libraries on unix based systems
+        set_target_properties(hello_physx PROPERTIES
+            BUILD_WITH_INSTALL_RPATH TRUE
+            INSTALL_RPATH "$ORIGIN"
+        )
+    endif()
     add_custom_command(TARGET hello_physx POST_BUILD
-                       COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                       $<TARGET_FILE:unofficial::omniverse-physx-sdk-gpu-library>
-                       $<TARGET_FILE_DIR:hello_physx>)
+                    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    $<TARGET_FILE:unofficial::omniverse-physx-sdk-gpu-library>
+                    $<TARGET_FILE_DIR:hello_physx>)
     if(WIN32)
         add_custom_command(TARGET hello_physx POST_BUILD
-                           COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                           $<TARGET_FILE:unofficial::omniverse-physx-sdk-gpu-device-library>
-                           $<TARGET_FILE_DIR:hello_physx>)
+                        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                        $<TARGET_FILE:unofficial::omniverse-physx-sdk-gpu-device-library>
+                        $<TARGET_FILE_DIR:hello_physx>)
     endif()
 else()
     message(WARNING "GPU acceleration library target not defined - GPU acceleration will NOT be available!")
